# U-Nesting

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  clippy.toml  deny.toml  rustfmt.toml
.github/workflows/: ci.yml  nuget-release.yml  python-publish.yml  release.yml
crates/benchmark/: Cargo.toml
crates/benchmark/src/: dataset.rs  dataset3d.rs  download.rs  lib.rs  main.rs  parser.rs  result.rs  runner.rs  runner3d.rs  synthetic.rs
crates/core/: Cargo.toml
crates/core/src/: alns.rs  brkga.rs  error.rs  exact.rs  ga.rs  gdrr.rs  geometry.rs  lib.rs  memory.rs  placement.rs  result.rs  sa.rs  solver.rs  transform.rs
crates/core/tests/: integration_tests.rs
crates/cutting/: Cargo.toml
crates/cutting/src/: bridge.rs  common_edge.rs  config.rs  contour.rs  cost.rs  gtsp.rs  hierarchy.rs  leadin.rs  lib.rs  path.rs  pierce.rs  result.rs  sequence.rs  thermal.rs
crates/cutting/tests/: integration.rs
crates/d2/: Cargo.toml
crates/d2/benches/: nfp_bench.rs
crates/d2/src/: alns_nesting.rs  boundary.rs  brkga_nesting.rs  ga_nesting.rs  gdrr_nesting.rs  geometry.rs  lib.rs  milp_solver.rs  nester.rs  nfp.rs  nfp_cm_solver.rs  nfp_sliding.rs  placement_utils.rs  sa_nesting.rs
crates/d2/tests/: integration_tests.rs
crates/d3/: Cargo.toml
crates/d3/benches/: packer_bench.rs
crates/d3/src/: boundary.rs  brkga_packing.rs  extreme_point.rs  ga_packing.rs  geometry.rs  lib.rs  packer.rs  packing_utils.rs  physics.rs  sa_packing.rs  spatial_index.rs  stability.rs
crates/ffi/: Cargo.toml  build.rs  cbindgen.toml
crates/ffi/src/: api.rs  lib.rs  types.rs
crates/python/: Cargo.toml  pyproject.toml
crates/python/python/u_nesting/: __init__.py  __init__.pyi
crates/python/src/: lib.rs
crates/u-nesting/: Cargo.toml
crates/u-nesting/src/: lib.rs
demo/: nesting_ui.py  nesting_viewer.html  sample_parts.json  test_blf.py
docs/: ROADMAP.md
docs/research/: research-01.md  research-02.md  research-03.md
docs/user-guide/: README.md
