[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "u-nesting"
version = "0.1.0"
description = "2D/3D spatial optimization engine for nesting and bin packing"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
authors = [
    { name = "iyulab" }
]
keywords = ["nesting", "bin-packing", "optimization", "geometry", "2d", "3d"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Manufacturing",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
]

[project.urls]
Homepage = "https://github.com/iyulab/U-Nesting"
Repository = "https://github.com/iyulab/U-Nesting"
Issues = "https://github.com/iyulab/U-Nesting/issues"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "u_nesting"
